# inkscape-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-usage-guide.md
docs/install/: README.md  compatibility.md  host-configs.md  install.md  troubleshooting.md
evals/: run_eval.py  run_live_eval.py  tool_selection_scenarios.json
examples/: README.md  claude_desktop_config.json
scripts/: ci_boot_smoke.py  ci_diagnostics.py  ci_surface_smoke.py  gen_llms_txt.py  install-live-helper.ps1  install-live-helper.sh
src/inkscape_mcp/: __init__.py  config.py  intents.py  logging_setup.py  operations.py  overview.py  quality.py  registry.py  retention.py  server.py  snapshots.py  tool_annotations.py  tool_descriptions.py  tool_tags.py  validate.py
src/inkscape_mcp/actions/: __init__.py  capability_map.py  chains.py
src/inkscape_mcp/document/: __init__.py  inspect.py
src/inkscape_mcp/edit/: __init__.py  batch.py  collection.py  compose.py  create.py  dom.py  optimize.py  paths.py  pipeline.py  style.py  text_object.py  transform.py
src/inkscape_mcp/engine/: __init__.py  manager.py  ops.py  process.py
src/inkscape_mcp/fonts/: __init__.py  coverage.py
src/inkscape_mcp/live/: __init__.py  cache.py  dbus_backend.py  diff.py  edit.py  events.py  loop.py  protocol.py  records.py  render.py  scene.py  selection.py  session.py  socket_backend.py  sync.py  transport.py
src/inkscape_mcp/prompts/: __init__.py  authoring.py  library.py  live.py
src/inkscape_mcp/render/: __init__.py  batch.py  cli.py  profiles.py  verify.py
src/inkscape_mcp/resources/: __init__.py  document.py  live.py  prompts.py  runtime.py
src/inkscape_mcp/runtime/: __init__.py  probe.py
src/inkscape_mcp/tools/: __init__.py  actions.py  batch.py  collection_set.py  compose.py  create.py  discover.py  document.py  dom.py  export.py  export_batch.py  find.py  live.py  optimize.py  paths.py  profiles.py  quality.py  save.py  snapshots.py  style.py  system.py  text_object.py  transform.py  transform_objects.py  validate.py
src/inkscape_mcp/workspace/: __init__.py  limits.py  (+6 more)
tests/: conftest.py  fake_inkscape_shell.py  test_action_chains.py  test_actions_discovery.py  test_apply_edits.py  test_apply_edits_drift_guard.py  test_classification_drift_guard.py  test_collection_set.py  test_compose_svg.py  test_create_document.py  test_create_tools.py  test_document_inspect.py  test_document_resources.py  test_document_tools.py  test_dom_tools.py  test_e16_10.py  test_e5_surface_mcp.py  test_edit_pipeline.py  test_engine_diagnostics.py  test_engine_manager.py  test_engine_ops.py  test_engine_process.py  test_engine_routing.py  test_eval_harness.py  test_export.py  test_export_batch.py  test_find_objects.py  test_intent_discovery.py  test_limits.py  test_live_cache.py  test_live_dbus_backend.py  test_live_diff.py  test_live_edit.py  test_live_eval_runner.py  test_live_events.py  test_live_loop.py  test_live_protocol.py  test_live_records.py  test_live_scene.py  test_live_selection.py  (+39 more)
(+2 files in other folders)
